# metalens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  observablehq.config.ts  package-lock.json  package.json  pyproject.toml  single_file_example.html
.github/workflows/: deploy.yml
bolt/: index.html
docs/: DEPLOYMENT.md  DMCA.md  PRIVACY.md  TERMS.md  about.md  aloe2013.md  createDoubleRange.js  createPillToggle.js  doubleRange.css  eli5.md  event.js  example-dashboard.md  example-dashboard_v0.1.md  format.js  fplot.js  index.md  input.md  methodology.md  molloy2014.md  test.md  utils.js
paperlens/: __init__.py  app.py  auth.py  contract.py  credits.py  enrich.py  exporter.py  extract.py  figures_spec.py  github_publish.py  ingest.py  parsed.py  pdf_utils.py  presets.py  presets_loader.py  principal.py  providers.py  reconstruct.py  records.py  schema.sql  storage.py  worker.py
scripts/: create_user.py  dev.sh  healthcheck.py  import_published_datasets.py  purge_test_rows.py  seed_demo.py  seed_presets.py
tests/: conftest.py  fixtures.py  test_add_papers_assign.py  test_analyses.py  test_auth.py  test_authz.py  test_basic_gate.py  test_catalog.py  test_credibility.py  test_credits.py  test_datasets.py  test_db_roundtrip.py  test_dedup_lifecycle.py  test_enrich.py  test_export.py  test_extract.py  test_github_publish.py  test_papers_library.py  test_parsed.py  test_preset_editing.py  test_presets.py  test_presets_personal.py  test_projects.py  test_roundtrip.py  test_screening.py  test_storage.py  test_views.py  test_worker.py
(+98 files in other folders)
