[project]
name = "paperlens"
version = "0.1.0"
description = "PaperLens — provenance-tracked extracted-record layer (Phase 1 spine)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "arq>=0.26",
    "boto3>=1.34",
    "pymupdf>=1.24",
    "openai>=1.30",
    "google-genai>=1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
